edit beneficio proyect

--- a/Jupyter/BeneficiosYPerdidas.ipynb
+++ b/Jupyter/BeneficiosYPerdidas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1a6326b",
+   "id": "340fff3d",
    "metadata": {},
    "source": [
     "# Bitacora de beneficios y perdidas\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "361470d4",
+   "id": "a50eb978",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "abf14a6c",
+   "id": "cc19d004",
    "metadata": {},
    "source": [
     "![ByP.PNG](attachment:ByP.PNG)"
@@ -43,14 +43,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5974905",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aca empieza mi codigo--------------------------------------\n",
+      "Hola Juan\n",
+      "1\n",
+      "8\n",
+      "Aca termina mi codigo--------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Aca empieza mi codigo--------------------------------------\")\n",
+    "#asi se crea una variable numerica\n",
+    "numero = 1\n",
+    "#asi se crea una variable tipo string\n",
+    "nombre = \"Juan\"\n",
+    "#asi se imprime un texto con una variable\n",
+    "print(\"Hola \"+nombre)\n",
+    "#asi se imprime en consola o en terminal\n",
+    "print(numero)\n",
+    "#asi se hace un incremento de una variable\n",
+    "numero = numero + 7\n",
+    "print(numero)\n",
+    "print(\"Aca termina mi codigo--------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec4956ca",
+   "metadata": {},
+   "source": [
+    "### definiciond e una variable"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "595fa6c9",
+   "id": "7495afa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = input(\"Hola como te llamas?  :  \")\n",
+    "print(\"Hola \",var)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47b1c860",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ea2f29cb02daac3055d28732bfaf6401dbc5c2cdb9d0eab410ecef7e9c6925df"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
