Update scripts paradoc, actividades

--- a/Jupyter/BeneficiosYPerdidas.ipynb
+++ b/Jupyter/BeneficiosYPerdidas.ipynb
@@ -60,48 +60,41 @@
     }
    ],
    "source": [
-    "print(\"Aca empieza mi codigo--------------------------------------\")\n",
-    "#asi se crea una variable numerica\n",
-    "numero = 1\n",
-    "#asi se crea una variable tipo string\n",
-    "nombre = \"Juan\"\n",
-    "#asi se imprime un texto con una variable\n",
-    "print(\"Hola \"+nombre)\n",
-    "#asi se imprime en consola o en terminal\n",
-    "print(numero)\n",
-    "#asi se hace un incremento de una variable\n",
-    "numero = numero + 7\n",
-    "print(numero)\n",
-    "print(\"Aca termina mi codigo--------------------------------------\")"
+    "#todo lo que asignamos de un input llega como string(str)\n",
+    "ingresos = input(\"Digite los ingresos : \")\n",
+    "gastos = input(\"Digite los gastos : \")\n",
+    "resultado = None\n",
+    "\n",
+    "#intentar ejecutar una linea de codigo  y verificar que no arroje un error\n",
+    "try:\n",
+    "    ingresos=int(ingresos)\n",
+    "    gastos=int(gastos)\n",
+    "#esta excepción se ejecuta si el bloque de codigo dentro del try llegaa fallar\n",
+    "except:\n",
+    "    print(\"El valor ingresado debe ser de tipo numerico o de type int\")\n",
+    "    print(\"vuelva a correr la aplicacion\")\n",
+    "    exit()\n",
+    "\n",
+    "#iprimimos los valores ingresados\n",
+    "print(f\"Los ingresos son = {ingresos}\")\n",
+    "print(f\"Los gastos son = {gastos}\")\n",
+    "\n",
+    "# los if nos permiten hacer una comparacion o una pregunta interna que nos retorna un valor de falso o verdadero\n",
+    "# si la condicon es verdaera, ejecuta el bloque q hay dentro del if\n",
+    "if ingresos > gastos:\n",
+    "    resultado = \"ganancia\"\n",
+    "    valorResultado = ingresos-gastos\n",
+    "# si la condicon del if no es verdaera, valida la siguiente condicion, y si se cumple, ejecuta el bloque q hay dentro del elif de la condicion\n",
+    "elif ingresos == gastos:\n",
+    "    resultado = \"equilibrio\"\n",
+    "    valorResultado = 0\n",
+    "#si ninguna de las condiciones se cumple ejecuta lo que hay dentro del bloque de else\n",
+    "else:\n",
+    "    resultado = \"perdida\"\n",
+    "    valorResultado = gastos-ingresos\n",
+    "\n",
+    "print(f\"El resultado es una {resultado} de {valorResultado} pesos\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec4956ca",
-   "metadata": {},
-   "source": [
-    "### definiciond e una variable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7495afa3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var = input(\"Hola como te llamas?  :  \")\n",
-    "print(\"Hola \",var)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47b1c860",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
